# mbuscrate

./: .gitignore  .mutants.toml  .probe.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  IMPLEMENTATION_GAPS.md  LICENSE  README.md  build_rs_cov.profraw  lcov.info  pre-commit.sh  test_vife_debug.rs  tracker.md
.cargo/: config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-enhanced.yml  ci.yml
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
benches/: aes_hardware_benchmark.rs  crypto_benchmark.rs  edge_cases_benchmark.rs  parsing_benchmark.rs  sha_benchmark.rs  simd_benchmark.rs  vif_benchmark.rs
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  DEBUG_LOG.md  DEPLOYMENT.md  DUAL_PATH_INSTRUMENTATION.md  ENHANCEMENTS.md  EXAMPLES.md  HARDWARE.md  LORA.md  LORA_INSTRUMENTATION.md  LORA_PARAMETERS.md  MANUFACTURER_DATABASE.md  MBUS_WMBUS_INSTRUMENTATION.md  MODE13_TLS.md  MODULES.md  PAYLOADS.md  PERFORMANCE.md  PROTOCOL.md  RASPBERRY_PI_HARDWARE_OFFLOAD.md  RASPBERRY_PI_PLATFORMS.md  RASPBERRY_PI_SETUP.md  README.md  RP2350_WMBUS_DESIGN.md  RTT_LOGGING.md  SECURITY.md  SERIAL_TESTING_STRATEGY.md  SX126X.md  TESTING.md  TRANSIENT_STATES.md  TROUBLESHOOTING.md  code_review.md  design.md  hierarchy.md  prompts.md  results.md
examples/: Cargo.toml  dual_path_gateway.rs  instrumentation_demo.rs  lora_decoder_demo.rs  parse_frame.rs  pi_quick_start.rs  pio_irq_demo.rs  raspberry_pi_wmbus.rs  rtt_logging_demo.rs  simd_demo.rs  simple_client.rs  single_channel_gateway.rs
fuzz/: Cargo.toml  fuzz_parse_frame.rs
fuzz/fuzz_targets/: fuzz_data_encoding.rs  fuzz_multi_telegram.rs  fuzz_parse_frame.rs  fuzz_vif_decode.rs
samples/: README.md  instrumentation_samples.json
scripts/: build_pi.sh  setup-probe-rs.sh
src/: constants.rs  defmt_timestamp.rs  error.rs  lib.rs  logging.rs  main.rs  mbus_device_manager.rs
src/AI/: design  hierarchy
src/instrumentation/: converters.rs  mod.rs  stats.rs
src/logging/: defmt_writer.rs  rtt_init.rs
src/mbus/: device.rs  frame.rs  mbus_protocol.rs  mod.rs  secondary_addressing.rs  serial.rs  serial_mock.rs  serial_testable.rs  simd.rs  tcp.rs
src/payload/: data.rs  data_encoding.rs  mod.rs  record.rs  vif.rs  vif_maps.rs
src/util/: bitrev.rs  hex.rs  iobuffer.rs  logging.rs  mod.rs
src/vendors/: manufacturer.rs  mod.rs  qundis_hca.rs
src/wmbus/: block.rs  compact_cache.rs  crypto.rs  crypto_hardware.rs  encoding.rs  encryption.rs  frame.rs  frame_decode.rs  handle.rs  mod.rs  mode_switching.rs  network.rs  protocol.rs  sha_hardware.rs  simd_crc.rs
src/wmbus/radio/: calib.rs  driver.rs  irq.rs  mod.rs  modulation.rs  modulation_tests.rs  pio_irq.rs  radio_driver.rs  rfm69.rs  rfm69_packet.rs  rfm69_registers.rs
src/wmbus/radio/hal/: enhanced_gpio.rs  mod.rs  raspberry_pi.rs
src/wmbus/radio/lora/: adr.rs  cad.rs  channel_hopping.rs  class_bc.rs  decoder.rs  decoder_nom.rs  duty_cycle.rs  format_detector.rs  irq_queue.rs  lbm.rs  mod.rs  packet.rs  params.rs  single_channel.rs  smart_decoder.rs  smart_decoder_v2.rs  sx1262.rs
src/wmbus/radio/lora/decoders/: compact_frame.rs  decentlab.rs  dragino.rs  elvaco.rs  generic_counter.rs  mod.rs  sensative.rs
src/wmbus/radio/lora/decoders/nom/: cayenne_lpp.rs  compact_frame_nom.rs  mod.rs  oms.rs
tests/: baud_rate_adaptation_tests.rs  data_encoding_tests.rs  data_tests.rs  e2e_scenarios.rs  enhanced_integration_tests.rs  enhanced_variable_data_tests.proptest-regressions  enhanced_variable_data_tests.rs  enhancements_test.rs  error_tests.rs  frame_advanced_tests.rs  frame_tests.rs  golden_frames.rs  lib_tests.rs  logging_tests.rs  lora_decoder_tests.rs  lora_enhancements_test.rs  lora_params_tests.rs  manufacturer_tests.rs  mbus_protocol_tests.rs  mixed_device_tests.rs  mock_support.rs  pio_irq_tests.rs  raspberry_pi_integration.rs  record_advanced_tests.rs  record_tests.rs  rfm69_tests.rs  serial_tests.rs  serial_tests_advanced.rs.bak  sha_nist_vectors.rs  standards_compliance.rs  utils_tests.rs  vendor_extension_tests.rs  vif_tests.rs  wmbus_crc_tests.rs  wmbus_integration_tests.rs  wmbus_tests.rs
