[package]
name = "mbus-rs"
version = "1.0.0"
authors = ["John Fabienke <jfabienke@arqitekta.com>"]
edition = "2021"
description = "A Rust crate for M-Bus (Meter-Bus) protocol communication"
repository = "https://github.com/jfabienke/mbus-rs"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nom = "7.1"
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
bytes = "1.5"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"
tokio-test = "0.4.4"

[[bench]]
name = "parsing_benchmark"
harness = false
