[package]
name = "mbus-rs"
version = "1.0.0"
authors = ["John Fabienke <jfabienke@arqitekta.com>"]
edition = "2021"
description = "A Rust crate for M-Bus (Meter-Bus) protocol communication"
repository = "https://github.com/jfabienke/mbus-rs"
license = "MIT"

[dependencies]
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nom = "7.1"
proptest = "1.7.0"
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
bitflags = "2.4"
once_cell = "1.19"
zeroize = { version = "1.7", features = ["derive"] }

# Enhanced crypto dependencies
aes = { version = "0.8", optional = true }
cipher = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
cmac = { version = "0.7", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }

# Raspberry Pi HAL dependencies (optional)
rppal = { version = "0.17", optional = true }

# PIO IRQ dependencies for Pi 5
nix = { version = "0.28", optional = true }
libc = { version = "0.2", optional = true }

# RFM69 driver dependencies (optional)
crc = { version = "3.0", optional = true }

# Enhanced GPIO and logging dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# RTT + defmt logging dependencies for Pi
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
cortex-a = { version = "8.1", optional = true }
tock-registers = { version = "0.8", optional = true }
critical-section = { version = "1.2", features = ["std"], optional = true }

# Serialization for cache persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CBOR serialization for LoRa payloads
ciborium = "0.2"

# For per-device statistics
lazy_static = "1.4"

# For random channel selection in LoRa
rand = "0.8"

# For QUNDIS date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4.4"
tempfile = "3.8"

[[bench]]
name = "parsing_benchmark"
harness = false

[[bench]]
name = "crypto_benchmark"
harness = false

[[bench]]
name = "sha_benchmark"
harness = false

# Cargo aliases for development
[alias]
bench-sha = "bench --bench sha_benchmark --features crypto"
bench-crypto = "bench --bench crypto_benchmark --features crypto"
bench-all = "bench --features crypto"
pio-demo = "run --example pio_irq_demo --features pio-irq"
pio-test = "test --test pio_irq_tests --features pio-irq"

# Feature flags for platform support
[features]
default = []

# Platform support
raspberry-pi = ["rppal"]
raspberry-pi-4 = ["raspberry-pi"]
raspberry-pi-5 = ["raspberry-pi"]

# Hardware features
gpio-interrupt = ["raspberry-pi"]
hardware-spi = ["raspberry-pi"]
rfm69 = ["raspberry-pi", "crc"]

# PIO IRQ debouncing for Pi 5
pio-irq = ["dep:nix", "dep:libc"]

# Enhanced features for robust operation
crypto = ["dep:aes", "dep:cipher", "dep:aes-gcm", "dep:cmac", "dep:hmac", "dep:sha1"]
wmbus-crypto = ["crypto"]
enhanced-gpio = ["raspberry-pi", "dep:tracing"]
lorawan = []
tracing = ["dep:tracing"]
cbor = []

# RTT + defmt logging for Pi debugging
rtt-logging = ["dep:defmt", "dep:defmt-rtt", "dep:cortex-a", "dep:tock-registers", "dep:critical-section", "dep:tracing", "dep:tracing-subscriber"]
